--- a/.github/workflows/LibraryBuild.yml
+++ b/.github/workflows/LibraryBuild.yml
@@ -31,9 +31,9 @@ jobs:
 
     runs-on: ubuntu-18.04 # I picked Ubuntu to use shell scripts.
 
-    env:
+#    env:
       # Comma separated list without double quotes around the list.
-      REQUIRED_LIBRARIES: Servo
+#      REQUIRED_LIBRARIES: Servo
 
     strategy:
       matrix:
@@ -55,7 +55,7 @@ jobs:
           - megaTinyCore:megaavr:atxy7:chip=3217,clock=16internal
           - arduino:sam:arduino_due_x
           - arduino:samd:arduino_zero_native
-#          - adafruit:samd:adafruit_metro_m4:cache=on,speed=120,opt=small,maxqspi=50,usbstack=arduino,debug=off
+          - adafruit:samd:adafruit_metro_m4:cache=on,speed=120,opt=small,maxqspi=50,usbstack=arduino,debug=off
           - arduino:mbed:nano33ble
           - arduino:mbed_rp2040:pico
           - rp2040:rp2040:arduino_nano_connect
@@ -97,10 +97,10 @@ jobs:
           - arduino-boards-fqbn: arduino:samd:arduino_zero_native
             sketches-exclude: TwoServos,QuadrupedControl,RobotArmControl
 
-# Error in default samd/Servo.cpp:44:60 - volatile struct TC_STATUS_Type::<unnamed> has no member named SYNCBUSY
-#          - arduino-boards-fqbn: adafruit:samd:adafruit_metro_m4:cache=on,speed=120,opt=small,maxqspi=50,usbstack=arduino,debug=off
-#            platform-url: https://adafruit.github.io/arduino-board-index/package_adafruit_index.json
-#            sketches-exclude: TwoServos,QuadrupedControl,RobotArmControl
+# Error in default samd/Servo.cpp:44:60 - volatile struct TC_STATUS_Type::<unnamed> has no member named SYNCBUSY at compiling Arduino/libraries/Servo/src/stm32f4/Servo.cpp
+          - arduino-boards-fqbn: adafruit:samd:adafruit_metro_m4:cache=on,speed=120,opt=small,maxqspi=50,usbstack=arduino,debug=off
+            platform-url: https://adafruit.github.io/arduino-board-index/package_adafruit_index.json
+            sketches-exclude: TwoServos,QuadrupedControl,RobotArmControl
 
           - arduino-boards-fqbn: arduino:mbed:nano33ble
             arduino-platform: arduino:mbed@1.3.2 # the 2.0.0 is incompatible with Servo library
@@ -157,6 +157,7 @@ jobs:
           arduino-board-fqbn: ${{ matrix.arduino-boards-fqbn }}
           arduino-platform: ${{ matrix.arduino-platform }}
           platform-url: ${{ matrix.platform-url }}
-          required-libraries: ${{ env.REQUIRED_LIBRARIES }},${{ matrix.required-libraries }}
+#          required-libraries: ${{ env.REQUIRED_LIBRARIES }},${{ matrix.required-libraries }}
+          required-libraries: ${{ matrix.required-libraries }}
           sketches-exclude: ${{ matrix.sketches-exclude }}
           build-properties: ${{ toJson(matrix.build-properties) }}
